# syslog-ng-3.5

./: configure.ac
lib/: Makefile.am  cfg-grammar.y  cfg-parser.c  cfg.c  logreader.c  logreader.h  logwriter.c  stats.c  stats.h  templates.c  templates.h  type-hinting.c  value-pairs.c
lib/logproto/: logproto-text-client.c
modules/: Makefile.am
modules/afamqp/: afamqp-grammar.ym  afamqp.c
modules/affile/: affile-source.c  poll-file-changes.c  poll-file-changes.h
modules/afmongodb/: afmongodb-grammar.ym  afmongodb.c
modules/afprog/: afprog.c
modules/afsocket/: afsocket-source.c
modules/afstreams/: afstreams.c
modules/avro/: Makefile.am  avro-module-grammar.ym  avro-module-parser.c  avro-module-parser.h  avro-module.c  avro-module.h  logmsg.avsc  logmsg2.avsc  logmsg3.avsc  logmsg4.avsc
modules/json/: format-json.c
modules/json/tests/: test_json.c
tests/functional/: func_test.py
tests/unit/: Makefile.am  test_value_pairs.c
